data/derived/comb/progs/unify/prog7977.ml.out
Characters 148-152:
  let seen' = if List.mem seen h then seen else [h] @ [seen] in
                                                       ^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
